# wishlist

./: .gitignore  app.py  config.toml.example  pyproject.toml  requirements.txt
tests/: test_wishlist.py
wishlist/: __init__.py  configuration.py  sendmail.py  validator.py  wishlist.py
wishlist/static/css/: custom.css
wishlist/static/images/: favicon.b64
wishlist/static/js/: wishlist.js
wishlist/templates/: 400.html  401.html  404.html  500.html  add_wishlist_form.html  add_wishlist_item.html  base.html  create_wishlist.html  email_manage.eml  email_share.eml  email_verify.eml  error_base.html  index.html  recover_wishlist.html  unverified.html  wishlist.html  wishlist_items.html
